# Quidditch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  test.mlir
.github/workflows/: build.yaml  toolchain.yaml
codegen/: CMakeLists.txt  requirements.txt
codegen/compiler/: CMakeLists.txt  iree_compiler_plugin.cmake
codegen/compiler/src/: CMakeLists.txt
codegen/compiler/src/Quidditch/: CMakeLists.txt  ConvertToRISCV.cpp  DisableQuidditchVariant.cpp  FilterForxDSL.cpp  HoistHALOpsToFunc.cpp  LinkExecutables.cpp  OutlineLinalgOpsToxDSL.cpp  Passes.h  Passes.td  QuidditchTarget.cpp
codegen/compiler/src/Quidditch/Conversion/: CMakeLists.txt  ConvertDMAToLLVM.cpp  ConvertDMAToLLVM.h  ConvertSnitchToLLVM.cpp  ConvertSnitchToLLVM.h  ConvertToRISCV.cpp  Passes.h  Passes.td
codegen/compiler/src/Quidditch/Dialect/DMA/Extensions/: CMakeLists.txt  DMACoreSpecializationOpInterfaceImpl.cpp  DMACoreSpecializationOpInterfaceImpl.h
codegen/compiler/src/Quidditch/Dialect/DMA/IR/: CMakeLists.txt  DMAAttrs.cpp  DMAAttrs.h  DMAAttrs.td  DMADialect.cpp  DMADialect.h  DMADialect.td  DMAOps.cpp  DMAOps.h  DMAOps.td  DMATypes.cpp  DMATypes.h  DMATypes.td
codegen/compiler/src/Quidditch/Dialect/Snitch/: CMakeLists.txt  QuidditchSnitchDialect.cpp  QuidditchSnitchDialect.h  QuidditchSnitchDialect.td  QuidditchSnitchOps.cpp  QuidditchSnitchOps.h  QuidditchSnitchOps.td
codegen/compiler/src/Quidditch/Dialect/Snitch/IR/: CMakeLists.txt  QuidditchSnitchAttrs.cpp  QuidditchSnitchAttrs.h  QuidditchSnitchAttrs.td  QuidditchSnitchDialect.cpp  QuidditchSnitchDialect.h  QuidditchSnitchDialect.td  QuidditchSnitchInterfaces.cpp  QuidditchSnitchInterfaces.h  QuidditchSnitchInterfaces.td  QuidditchSnitchOps.cpp  QuidditchSnitchOps.h  QuidditchSnitchOps.td  QuidditchSnitchTypes.cpp  QuidditchSnitchTypes.h  QuidditchSnitchTypes.td
codegen/compiler/src/Quidditch/Dialect/Snitch/Transforms/: CMakeLists.txt  FormMicrokernels.cpp  LowerForallOp.cpp  LowerL1Allocations.cpp  LowerPipelineOp.cpp  Passes.h  Passes.td  PipelineCopyCompute.cpp  PromoteToL1.cpp  SpecializeDMACode.cpp
codegen/compiler/src/Quidditch/Dialect/SnitchDMA/IR/: CMakeLists.txt  SnitchDMAAttrs.cpp  SnitchDMAAttrs.h  SnitchDMAAttrs.td  SnitchDMADialect.cpp  SnitchDMADialect.h  SnitchDMADialect.td  SnitchDMAOps.cpp  SnitchDMAOps.h  SnitchDMAOps.td  SnitchDMATypes.cpp  SnitchDMATypes.h  SnitchDMATypes.td
codegen/compiler/src/Quidditch/Dialect/SnitchDMA/Transforms/: CMakeLists.txt  LegalizeDMAOperations.cpp  Passes.h  Passes.td
codegen/iree-configuration/: CMakeLists.txt
codegen/tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  quidditch-lit.py.in  smoketest.mlir
codegen/tests/Conversion/ConvertDMAToLLVM/: combine_tokens.mlir  dma_transfer.mlir  dma_wait.mlir  zero_mem_transfer.mlir
codegen/tests/Conversion/ConvertSnitchToLLVM/: barrier.mlir  cluster_index.mlir  completed_token.mlir  compute_core_index.mlir  dma_transfer.mlir  dma_transfer_1d.mlir  dma_wait.mlir  l1_memory_view.mlir  microkernel_call.mlir  microkernel_fence.mlir  zero_mem_transfer.mlir
codegen/tests/Dialect/DMA/IR/: bufferization.mlir  canonicalization.mlir  roundtrip.mlir
codegen/tests/Dialect/Snitch/: bufferization.mlir  roundtrip.mlir
codegen/tests/Dialect/Snitch/IR/: bufferization.mlir  canonicalization.mlir  roundtrip.mlir
codegen/tests/Dialect/Snitch/Transforms/: lower-forall.mlir  lower-l1-allocations.mlir  lower-pipeline.mlir  pipeline-copy-compute.mlir  promote-allocs-to-l1.mlir  promote-operands-to-l1.mlir  promote-pads-to-l1.mlir  promote-to-l1.mlir  specialize-dma-code.mlir
codegen/tests/Dialect/SnitchDMA/Transforms/: dma_transfer.mlir
codegen/tests/HostHALOpsToFunc/: test.mlir
codegen/tools/: CMakeLists.txt  quidditch-opt.cpp
runtime/: .clang-format  CMakeLists.txt  ToolchainFile.cmake  requirements.txt
runtime/cmake/: quidditch_module.cmake
runtime/iree-configuration/: CMakeLists.txt  config.h
runtime/runtime/: iree_runtime_plugin.cmake
runtime/runtime/src/: CMakeLists.txt
runtime/runtime/src/Quidditch/: CMakeLists.txt  device.c  device.h  event.c  semaphore.c  semaphore.h
runtime/runtime/src/Quidditch/command_buffer/: CMakeLists.txt  command_buffer.c  command_buffer.h
runtime/runtime/src/Quidditch/device/: CMakeLists.txt  device.c  event.h
runtime/runtime/src/Quidditch/device/registration/: CMakeLists.txt  registration.h
runtime/runtime/src/Quidditch/dispatch/: CMakeLists.txt  dispatch.c  dispatch.h
runtime/runtime/src/Quidditch/executable/: CMakeLists.txt  executable.c  executable.h  executable_library.c  executable_library.h
runtime/runtime/src/Quidditch/loader/: CMakeLists.txt  loader.c  loader.h
runtime/runtime/src/Quidditch/registration/: registration.c
runtime/samples/: CMakeLists.txt  local_sync.c  main.c  simple_add.mlir
runtime/samples/big_matvec/: CMakeLists.txt  big_matvec.mlir  main.c
runtime/samples/nsnet2/: CMakeLists.txt  NsNet2.py  main.c  nsnet2_util.c  nsnet2_util.h  requirements.txt
runtime/samples/util/: CMakeLists.txt  run_model.c  run_model.h
runtime/samples/vec_multiply/: CMakeLists.txt  main.c
runtime/snitch_cluster/: CMakeLists.txt
runtime/snitch_cluster/api/: ssr_decls.h  stack_decls.h
runtime/snitch_cluster/rtl/src/: quidditch_cluster_defs.h  snitch_cluster_start.S  snitch_cluster_start.c  snrt.c  snrt.h  syscalls.c
runtime/tests/: CMakeLists.txt  main.c  test.s
runtime/toolchain/: Dockerfile  README.md  multi-thread-verilator.diff  phase1.cmake  phase2.cmake  snRuntime-01.patch  static-verilator-02.patch
runtime/util/: snitch_trace_to_perfetto.py
