add_subdirectory(registration)

iree_cc_library(
    NAME
    device
    SRCS
    device.c
    event.c
    semaphore.c
    DEPS
    iree::base
    iree::base::internal
    iree::base::internal::arena
    iree::base::internal::synchronization
    iree::hal::local::executable_library_util
    iree::hal::local::executable_loader
    iree::hal::utils::deferred_command_buffer
    iree::hal::utils::file_transfer
    iree::hal::utils::memory_file
    iree::hal::utils::semaphore_base
    Quidditch::command_buffer::command_buffer
    PUBLIC
)
